# researchflow

./: .mcp.json  README.md  pyproject.toml
.agents/plugins/: marketplace.json
examples/fixture_project/.researchflow/: .gitignore  project.json
examples/fixture_project/.researchflow/experiments/: EXP-7CE53C582B.json  EXP-C715AA0D1D.json
examples/fixture_project/runs/baseline/20260101_000000/: config.json  summary.json  train_metrics.jsonl
examples/fixture_project/runs/derived/20260101_010000/: config.json  summary.json  train_metrics.jsonl
hooks/: hooks.json  user_prompt_submit.py
plugins/researchflow/.codex-plugin/: plugin.json
plugins/researchflow/hooks/: common.py  post_tool_use.py  session_start.py  stop.py
plugins/researchflow/researchflow/: cli.py  compare.py  lineage.py  render.py  scan.py  schema.py  search.py  store.py  vector_search.py
researchflow/: __init__.py  cli.py  mcp_server.py  store.py
skills/researchflow/: SKILL.md
skills/researchflow/references/: schema.md  workflow.md
tests/: test_researchflow.py
